[gd_scene load_steps=12 format=3 uid="uid://crk5itkoap4a7"]

[ext_resource type="Script" path="res://scripts/stick.gd" id="1_j8in3"]
[ext_resource type="PackedScene" uid="uid://cnxgpjtbdx04j" path="res://scenes/rope_sling.tscn" id="1_lq85c"]
[ext_resource type="Script" path="res://scripts/pid_controller.gd" id="2_serx7"]
[ext_resource type="Texture2D" uid="uid://0rdv2jrsa4w8" path="res://icon.svg" id="3_3ud0c"]
[ext_resource type="PackedScene" uid="uid://dacvoc0g37u2r" path="res://scenes/planet.tscn" id="3_ykvw6"]
[ext_resource type="Script" path="res://scripts/camera_world.gd" id="5_3xaxf"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_di2ty"]
distance = 399.36

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pb1sp"]
friction = 0.08
bounce = 0.47

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6v42q"]
size = Vector2(35, 1000)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_qdwgg"]
friction = 0.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_xefw7"]

[node name="CatGame" type="Node2D"]

[node name="WaterArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterArea"]
shape = SubResource("WorldBoundaryShape2D_di2ty")

[node name="Stick" type="RigidBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_pb1sp")
script = ExtResource("1_j8in3")
steady_speed = 1e+06
pull_up_impulse = 2000.0
torque_impulse = 1.3e+06
water_angle = 130.0
thrust = 5000.0

[node name="PIDStickController" type="Node" parent="Stick"]
unique_name_in_owner = true
script = ExtResource("2_serx7")
proportional_gain = 20.0
derivative_gain = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stick"]
position = Vector2(0, -308)
shape = SubResource("RectangleShape2D_6v42q")

[node name="Polygon2D" type="Polygon2D" parent="Stick"]
position = Vector2(0, -308)
scale = Vector2(0.34, 1)
color = Color(0.28, 0.23534, 0.1876, 1)
polygon = PackedVector2Array(-50, 500, -50, 5.62048, -50, -500, 50, -500, 50, 500)

[node name="RopeSling" parent="Stick" instance=ExtResource("1_lq85c")]

[node name="PIDController" parent="Stick/RopeSling" index="0"]
derivative_gain = 0.3

[node name="RopeConnection" parent="Stick/RopeSling" index="1"]
stretch_lenience = 100
tension_speed = 8000

[node name="AttachmentRope" parent="Stick/RopeSling" index="2"]
position = Vector2(10, -784)
offset = Vector2(10, -784)
gravity = Vector2(0, 10)
damping = 0.9
color = Color(0.516082, 0.400528, 0.307322, 1)

[node name="Planet" parent="Stick/RopeSling" instance=ExtResource("3_ykvw6")]
mass = 0.301
physics_material_override = SubResource("PhysicsMaterial_qdwgg")
gravity_scale = 4.0
linear_damp_mode = 1
linear_damp = 0.3

[node name="world" type="Node2D" parent="."]
script = ExtResource("5_3xaxf")

[node name="WorldBoundry" type="StaticBody2D" parent="world"]
unique_name_in_owner = true
position = Vector2(1740, 0)
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="world/WorldBoundry"]
shape = SubResource("WorldBoundaryShape2D_xefw7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="world/WorldBoundry"]
position = Vector2(-0.0240748, -3837)
rotation = 3.14158
shape = SubResource("WorldBoundaryShape2D_xefw7")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="world/WorldBoundry"]
position = Vector2(1361.99, -1843.01)
rotation = -1.57081
shape = SubResource("WorldBoundaryShape2D_xefw7")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="world/WorldBoundry"]
position = Vector2(-831.012, -1842.99)
rotation = 1.57079
shape = SubResource("WorldBoundaryShape2D_xefw7")

[node name="Parallax2D" type="Parallax2D" parent="world"]
visible = false
z_index = -1
repeat_size = Vector2(1000, 0)
repeat_times = 4

[node name="Sprite2D3" type="Sprite2D" parent="world/Parallax2D"]
self_modulate = Color(0.572549, 0, 1, 0.427451)
position = Vector2(466.74, -333.32)
scale = Vector2(2.91, 52.12)
texture = ExtResource("3_3ud0c")

[node name="Sprite2D4" type="Sprite2D" parent="world/Parallax2D"]
self_modulate = Color(0.160784, 1, 1, 0.376471)
position = Vector2(4.23999, -333.32)
scale = Vector2(2.91, 52.12)
texture = ExtResource("3_3ud0c")

[node name="BorderedCam" type="Camera2D" parent="world"]
unique_name_in_owner = true
position = Vector2(-163, -268)
zoom = Vector2(0.28, 0.28)

[connection signal="body_entered" from="WaterArea" to="Stick" method="_on_water_area_body_entered"]
[connection signal="body_exited" from="WaterArea" to="Stick" method="_on_water_area_body_exited"]

[editable path="Stick/RopeSling"]
